--- a/gases-intro_en.html
+++ b/gases-intro_en.html
@@ -32,6 +32,10 @@
         "grunt": "~1.4.0"
       },
       "phet": {
+        "colorProfiles": [
+          "default",
+          "projector"
+        ],
         "requirejsNamespace": "GASES_INTRO",
         "simulation": true,
         "runnable": true,
