--- a/gases-intro_en.html
+++ b/gases-intro_en.html
@@ -137,7 +137,7 @@
 
   // Module loading in compilation-free (development) mode will be kicked off once strings are loaded.
   // This is done in load-unbuilt-strings.js
-  window.phet.chipper.loadModules = () => loadURL( 'js/gases-intro-main.js', 'module' );
+  window.phet.chipper.loadModules = () => loadURL( '../chipper/dist/gases-intro/js/gases-intro-main.js', 'module' );
 </script>
 </body>
 </html>
