Adding screenNameKeys to package.json (and adding some translated strings to some runnables), see https://github.com/phetsims/chipper/issues/1367

--- a/gases-intro_en.html
+++ b/gases-intro_en.html
@@ -52,10 +52,33 @@
           ]
         },
         "supportsOutputJS": true,
-        "published": true
+        "published": true,
+        "screenNameKeys": [
+          "GASES_INTRO/screen.intro",
+          "GASES_INTRO/screen.laws"
+        ]
       },
       "eslintConfig": {
-        "extends": "../chipper/eslint/sim_eslintrc.js"
+        "extends": "../chipper/eslint/sim_eslintrc.js",
+        "overrides": [
+          {
+            "files": [
+              "**/*.ts"
+            ],
+            "rules": {
+              "@typescript-eslint/no-explicit-any": "error",
+              "@typescript-eslint/ban-ts-comment": [
+                "error",
+                {
+                  "ts-expect-error": true,
+                  "ts-ignore": true,
+                  "ts-check": true,
+                  "ts-nocheck": true
+                }
+              ]
+            }
+          }
+        ]
       }
     };
   window.phet.chipper.stringRepos =
